--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^5.2.4",
     "css-minimizer-webpack-plugin": "^3.3.1",
+    "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.43.5",
@@ -27,7 +28,11 @@
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.7.3"
   },
-  "keywords": ["Frontend,", "SASS", "JavaScript"],
+  "keywords": [
+    "Frontend,",
+    "SASS",
+    "JavaScript"
+  ],
   "author": "Cristian Velasco",
   "license": "MIT"
 }
